# audio-plugin-template

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/PluginName/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
